syntax = "proto3";

package Rpc.Service;

service RpcService{
	rpc Query(Data) returns (Result) {}
	rpc Update(Data) returns (Empty) {}
	rpc TestConnection(Empty) returns (Result) {}
	rpc InstallPlugin(Data) returns (Result) {}
}

message Data {
	string json = 1;
}

message Empty {
}

message Result {
	bool success = 1;
	string message = 2;
	string json = 3;
}